# gfx-shader-watch

./: CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  manualtest
.github/workflows/: ci.yml
examples/: fragment_change.rs  watch_shaders.rs
examples/shader/: frag.glsl  vert.glsl
src/: lib.rs
src/psocell/: macros.rs  mod.rs  watcher.rs
tests/: watching.rs
