[package]
name = "gfx_shader_watch"
version = "0.6.2"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2021"
description = "GFX Utility for watching shaders and reloading pipeline state on the fly"
repository = "https://github.com/alexheretic/gfx-shader-watch"
keywords = ["graphics", "gamedev"]
license = "Apache-2.0"

[dependencies]
gfx = "0.18.3"
log = "0.4"
notify = "6"

[dev-dependencies]
env_logger = "0.10"
glutin = "0.31"
old_school_gfx_glutin_ext = { path = "../old-school-gfx-glutin-ext" }
winit = "0.29"

[[example]]
name = "watch-shaders"
path = "examples/watch_shaders.rs"

[[example]]
name = "fragment-change"
path = "examples/fragment_change.rs"
