[package]
name = "gfx_shader_watch"
version = "0.6.2"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2021"
description = "GFX Utility for watching shaders and reloading pipeline state on the fly"
repository = "https://github.com/alexheretic/gfx-shader-watch"
keywords = ["graphics", "gamedev"]
license = "Apache-2.0"

[dependencies]
gfx = "0.18.3"
log = "0.4"
notify = "7"

[dev-dependencies]
env_logger = "0.11"
gfx_device_gl = "0.16.2"
glutin = "0.32"
old_school_gfx_glutin_ext = "0.34"
winit = "0.30"

[[example]]
name = "watch-shaders"
path = "examples/watch_shaders.rs"

[[example]]
name = "fragment-change"
path = "examples/fragment_change.rs"
